# SocialCodingReport

./: .gitignore  LICENSE.txt  README.md  deb-packages.txt  meson.build  requirements-dev.txt  ruff.toml
.agents/skills/python-gobject/: SKILL.md
data/: meson.build  report.html.jinja  vn.ququ.SocialCodingReport.desktop
src/: app_logging.py  config.py  consts.py  github_client.py  main.py  meson.build  models.py  paths.py.in  reporting.py  reproduce_config_local.py  schemas.py  socialcodingreport.gresource.xml  socialcodingreport.in  test_model_property.py  window.py
src/pages/: activity_table.py  meson.build  preferences_page.py  report_page.py
src/queries/: list-issues.gql
src/ui/: activity_table.blp  preferences_page.blp  report_page.blp  window.blp
tests/: github-response-schema.json  sample-events-p1.json  sample-events-p2.json  sample-events.json
